--- a/client/index.html
+++ b/client/index.html
@@ -1,14 +1,18 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" sizes="16x16 32x32" type="image/png" href="/ts-logo.ico" />
-    <script src="https://kit.fontawesome.com/22c0360cfd.js" crossorigin="anonymous"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TeamSync Pro</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" sizes="16x16 32x32" type="image/png" href="/ts-logo.ico" />
+  <script src="https://kit.fontawesome.com/22c0360cfd.js" crossorigin="anonymous"></script>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>TeamSync Pro</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <div id="portal-root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
